--- a/backend/package.json
+++ b/backend/package.json
@@ -9,10 +9,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "nodemon": "^3.1.7"
-  }
+  },
+  "description": ""
 }
